swap fee volume and usage volume charts; attempt to fix flicker

--- a/packages/explorer-2.0/css/flickity.css
+++ b/packages/explorer-2.0/css/flickity.css
@@ -1,7 +1,6 @@
 /*! Flickity v2.1.2
 https://flickity.metafizzy.co
 ---------------------------------------------- */
-
 .flickity-enabled {
   position: relative;
 }
@@ -17,6 +16,7 @@ https://flickity.metafizzy.co
 }
 
 .flickity-slider {
+  display: flex;
   position: absolute;
   width: 100%;
   height: 100%;
